[gd_scene load_steps=2 format=2]

[ext_resource path="res://Authentication.gd" type="Script" id=1]

[node name="Authentication" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 556.357
margin_top = 132.257
margin_right = 756.357
margin_bottom = 313.257
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 31.0
text = "          Login
"

[node name="Nick" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="VBoxContainer/Nick"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "Nick         "

[node name="NickInput" type="LineEdit" parent="VBoxContainer/Nick"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
text = "Leo"

[node name="Pass" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 200.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="VBoxContainer/Pass"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "Password "

[node name="PassInput" type="LineEdit" parent="VBoxContainer/Pass"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
text = "Hentai"
secret = true

[node name="IP" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 91.0
margin_right = 200.0
margin_bottom = 115.0

[node name="Label" type="Label" parent="VBoxContainer/IP"]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 19.0
text = "Ip             "

[node name="IpInput" type="LineEdit" parent="VBoxContainer/IP"]
margin_left = 69.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
text = "127.0.0.1"

[node name="Login" type="Button" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 200.0
margin_bottom = 139.0
text = "Login"

[node name="Register" type="Button" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 200.0
margin_bottom = 163.0
text = "Register"

[node name="Message" type="Label" parent="VBoxContainer"]
margin_top = 167.0
margin_right = 200.0
margin_bottom = 181.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="VBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
